--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,39 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DotForge"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="600" Width="800"
+        ResizeMode="NoResize">
+    <DockPanel>
+        <!-- メニューバー -->
+        <Grid DockPanel.Dock="Top" Height="20" Background="White">
+            <Grid.ColumnDefinitions>
+                <!-- 左メニュー用 -->
+                <ColumnDefinition Width="*" />
+                <!-- 右メニュー用 -->
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
 
-    </Grid>
+            <!-- 左側のメニュー -->
+            <Menu Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="48" Background="White">
+                <MenuItem Header="_ファイル">
+                    <MenuItem Header="終了" Click="ExitMenuItem_Click" />
+                </MenuItem>
+            </Menu>
+
+            <!-- 右側のメニュー -->
+            <Menu Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Height="48" Background="White">
+                <MenuItem Header="_ヘルプ" />
+            </Menu>
+        </Grid>
+
+        <!-- ステータスバー -->
+        <StatusBar DockPanel.Dock="Bottom">
+            <TextBlock Text="ステータスバー: 準備完了" />
+        </StatusBar>
+
+        <!-- コンテンツエリア -->
+        <Grid>
+            <TextBlock Text="ここにコンテンツを配置します" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        </Grid>
+    </DockPanel>
 </Window>
