--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="DotForge.MainWindow"
+<Window x:Class="DotForge.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DotForge"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800"
+        Title="MainWindow" Height="300" Width="600"
         ResizeMode="NoResize">
-    <DockPanel>
+    <DockPanel LastChildFill="True">
         <!-- メニューバー -->
         <Grid DockPanel.Dock="Top" Height="20" Background="White">
             <Grid.ColumnDefinitions>
@@ -36,8 +36,75 @@
         </StatusBar>
 
         <!-- コンテンツエリア -->
-        <Grid>
-            <TextBlock Text="ここにコンテンツを配置します" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <Grid Margin="10">
+            <!-- 行定義 -->
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <!-- 列定義 -->
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <!-- 1行目: テンプレート (Label + ListBox) -->
+            <Label Grid.Row="0" Grid.Column="0"
+                Content="テンプレート："
+                Margin="4" VerticalAlignment="Center"/>
+            <ListBox Grid.Row="0" Grid.Column="1"
+                    Height="22"
+                    Margin="4"/>
+
+            <!-- 2行目: プロジェクトファイル (Label + TextBox + 開くボタン) -->
+            <Label Grid.Row="1" Grid.Column="0"
+                Content="プロジェクトファイル："
+                Margin="4" VerticalAlignment="Center"/>
+            <TextBox Grid.Row="1" Grid.Column="1"
+                    Height="22"
+                    Margin="4"/>
+            <Button Grid.Row="1" Grid.Column="2"
+                    Content="開く"
+                    Padding="10,0" Margin="4"/>
+
+            <!-- 3行目: プロジェクト名 (Label + TextBox) -->
+            <Label Grid.Row="2" Grid.Column="0"
+                Content="プロジェクト名："
+                Margin="4" VerticalAlignment="Center"/>
+            <TextBox Grid.Row="2" Grid.Column="1"
+                    Height="22"
+                    Margin="4"/>
+
+            <!-- 4行目: クラス名 (Label + TextBox) -->
+            <Label Grid.Row="3" Grid.Column="0"
+                Content="クラス名："
+                Margin="4" VerticalAlignment="Center"/>
+            <TextBox Grid.Row="3" Grid.Column="1"
+                    Height="22"
+                    Margin="4"/>
+
+            <!-- 5行目: 出力先ディレクトリ (Label + TextBox + 開くボタン) -->
+            <Label Grid.Row="4" Grid.Column="0"
+                Content="出力先ディレクトリ："
+                Margin="4" VerticalAlignment="Center"/>
+            <TextBox Grid.Row="4" Grid.Column="1"
+                    Height="22"
+                    Margin="4"/>
+            <Button Grid.Row="4" Grid.Column="2"
+                    Content="開く"
+                    Padding="10,0" Margin="4"/>
+
+            <!-- 6行目: 出力ボタン（右寄せ） -->
+            <Button Grid.Row="5" Grid.Column="2"
+                    Content="出力"
+                    HorizontalAlignment="Right"
+                    Padding="20,5"/>
         </Grid>
+
     </DockPanel>
 </Window>
