--- a/template/Project.WPF(dotnet8)/App.xaml
+++ b/template/Project.WPF(dotnet8)/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="__ProjectName__.App"
+﻿<Application x:Class="___PROJECTNAME___.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:__ProjectName__"
+             xmlns:local="clr-namespace:___PROJECTNAME___"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
