--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -59,7 +59,7 @@
                 </MenuItem>
             </Menu>
             <Menu Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Height="48" Background="White">
-                <MenuItem Header="_ヘルプ" />
+                <MenuItem Header="_ヘルプ" Click="HelpMenu_Click"/>
             </Menu>
         </Grid>
 
