DIの設定とか修正

--- a/template/Project/WPF/Views/MainWindow.xaml
+++ b/template/Project/WPF/Views/MainWindow.xaml
@@ -4,8 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:___PROJECTNAME___.Views"
+        xmlns:vm="clr-namespace:___PROJECTNAME___.ViewModels"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:behaviors="clr-namespace:Microsoft.Xaml.Behaviors;assembly=Microsoft.Xaml.Behaviors"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <!-- ViewModel を DataContext に指定 -->
+    <Window.DataContext>
+        <vm:MainWindowViewModel/>
+    </Window.DataContext>
     <Grid>
 
     </Grid>
